# HarvardArtMuseums_API_Client

./: CONTRIBUTING.md  README.md  Vignette_for_package_functions.ipynb  pyproject.toml
.ipynb_checkpoints/: Vignette_for_package_functions-checkpoint.ipynb
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/harvardartmuseums_pkg/: index.doctree
docs/_build/doctrees/autoapi/harvardartmuseums_pkg/harvardartmuseums_pkg/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/harvardartmuseums_pkg/: index.rst.txt
docs/_build/html/_sources/autoapi/harvardartmuseums_pkg/harvardartmuseums_pkg/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/harvardartmuseums_pkg/: index.html
docs/_build/html/autoapi/harvardartmuseums_pkg/harvardartmuseums_pkg/: index.html
docs/_build/jupyter_execute/: example.ipynb  example.py
harvardartmuseums_pkg/: CHANGELOG.md  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
harvardartmuseums_pkg/docs/: Makefile  conf.py  example.ipynb  make.bat
harvardartmuseums_pkg/tests/: test_harvardartmuseums_pkg.py
src/harvardartmuseums_pkg/: __init__.py  harvardartmuseums_pkg.py
tests/: test_harvardartmuseums_pkg.py
