[tool.poetry]
name = "harvardartmuseums_pkg"
version = "0.1.0"
description = "a package to get datasets from Harvard Art Museums API"
authors = ["Hyunyoung Shin <hs3158@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
requests = "^2.26.0"
urllib3 = "^1.26.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
