[tool.poetry]
name = "harvardartmuseums_pkg"
version = "0.1.0"
description = "A package for getting datasets from the Harvard Art Museums API."
authors = ["Hyunyoung Shin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
urllib3 = "^1.26.7"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
